# SPIFF

./: .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml  requirements.txt
example_products/simp_j0136/: README.md  simp_j0136_binned.csv  simp_j0136_unbinned.csv
spiff/: __init__.py
src/spiff/: __init__.py  autotype.py  examples.py  lv2.py  results.py  single_fit.py  spherex_binning.py  spherex_psf_selection.py
src/spiff/data/: spherex_bins.csv  spherex_templates.joblib
tests/: test_autotype.py  test_examples.py  test_helper.py  test_lv2_jsonl.py  test_lv2_projection.py  test_lv2_s3_cutout.py  test_public_example_products.py  test_spherex_binning.py  test_spherex_psf_selection.py
