[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spiff"
version = "0.1.1"
description = "SPHEREx level-2 fitting and local autotyping toolkit."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "Jonathan Gagne"},
]
dependencies = [
  "astropy>=6.0",
  "astroquery>=0.4.10",
  "joblib>=1.3",
  "matplotlib>=3.6",
  "numpy>=1.24",
  "pandas>=1.5",
  "pyvo>=1.5",
  "s3fs>=2024.2.0",
  "scipy>=1.10",
]

[project.optional-dependencies]
ultranest = [
  "ultranest>=4.4",
]
dev = [
  "pytest>=7.0",
]

[project.scripts]
spiff-fit = "spiff.single_fit:main"
spiff-lv2 = "spiff.lv2:cli_main"
spiff-compile-results = "spiff.results:main"
spiff-autotype = "spiff.autotype:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spiff = ["data/*.csv", "data/*.joblib"]
